--- a/Credit-Card-Fraud-Detection.ipynb
+++ b/Credit-Card-Fraud-Detection.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "# Classifier Libraries\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
